<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut02.u2e3e4Propinatron">

    <Button
        android:id="@+id/u2e3e4bt0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4bt0"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u2e3e4btC"
        app:layout_constraintStart_toEndOf="@+id/u2e3e4btR"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt8" />

    <Button
        android:id="@+id/u2e3e4btR"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4btR"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt7" />

    <Button
        android:id="@+id/u2e3e4btC"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/u2e3e4btC"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt9" />

    <Button
        android:id="@+id/u2e3e4bt8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4bt8"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u2e3e4bt9"
        app:layout_constraintStart_toEndOf="@+id/u2e3e4bt7"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt5" />

    <Button
        android:id="@+id/u2e3e4bt7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4bt7"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt4" />

    <Button
        android:id="@+id/u2e3e4bt9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/u2e3e4bt9"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt6" />

    <Button
        android:id="@+id/u2e3e4bt5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4bt5"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u2e3e4bt6"
        app:layout_constraintStart_toEndOf="@+id/u2e3e4bt4"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt2" />

    <Button
        android:id="@+id/u2e3e4bt4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/u2e3e4bt4"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt1" />

    <Button
        android:id="@+id/u2e3e4bt6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/u2e3e4bt6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt3" />

    <Button
        android:id="@+id/u2e3e4bt2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/u2e3e4bt2"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u2e3e4bt3"
        app:layout_constraintStart_toEndOf="@+id/u2e3e4bt1"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4twTitle" />

    <Button
        android:id="@+id/u2e3e4bt3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/u2e3e4bt3"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4twTitle" />

    <Button
        android:id="@+id/u2e3e4bt1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/u2e3e4bt1"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4twTitle" />

    <TextView
        android:id="@+id/u2e3e4twTitle"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:paddingTop="15dp"
        android:text="@string/u2e3e4tw1"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/u2e3e4rbOpinion"
        android:layout_width="406dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4bt0">

        <RadioButton
            android:id="@+id/u2e3e4rbMalo"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:text="@string/u2e3e4rbMalo" />

        <RadioButton
            android:id="@+id/u2e3e4rbBueno"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:checked="false"
            android:text="@string/u2e3e4rbBueno" />

        <RadioButton
            android:id="@+id/u2e3e4rbExcelente"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:text="@string/u2e3e4rbExcelente" />

    </RadioGroup>

    <Button
        android:id="@+id/u2e3e4btCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/u2e3e4btCalcula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4twSalida1" />

    <TextView
        android:id="@+id/u2e3e4twSalida1"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/u2e3e4twSalida2"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4rbOpinion" />

    <TextView
        android:id="@+id/u2e3e4twSalida2"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e3e4rbOpinion" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/u2e3e4twTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/euro" />

</androidx.constraintlayout.widget.ConstraintLayout>