<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut03.Ej2.u3e2PedirHelado">

    <TextView
        android:id="@+id/u3e2phtwChocolate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/chocolate"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u3e2phetEntrada3"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phtwFresa" />

    <Spinner
        android:id="@+id/u3e2phspTipo"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="104dp"
        android:spinnerMode="dialog"
        android:prompt="@string/eligeHelado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phetEntrada3" />

    <EditText
        android:id="@+id/u3e2phetEntrada1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/N"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/u3e2phetEntrada3"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/N"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phetEntrada2" />

    <TextView
        android:id="@+id/u3e2phtwFresa"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/fresa"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u3e2phetEntrada2"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phtwVainilla" />

    <Button
        android:id="@+id/u3e2phbtGenera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#13AFF6"
        android:text="@string/u3e2btgenerate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/u3e2phtwTipo"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:text="@string/tipo"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u3e2phspTipo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phtwChocolate" />

    <TextView
        android:id="@+id/u3e2phtwVainilla"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="86dp"
        android:text="@string/vainilla"
        android:textAlignment="textEnd"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/u3e2phetEntrada1"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/u3e2phetEntrada2"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/N"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e2phetEntrada1" />

</androidx.constraintlayout.widget.ConstraintLayout>