<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut03.Ej7.u3e7Pokemon">

    <ImageButton
        android:id="@+id/u3e7imgbtSquirtle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/Squirtle"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e7imgbtBulbasaur"
        app:srcCompat="@mipmap/squirtle"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/u3e7imgbtCharmander"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/Charmander"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/charmander" />

    <ImageButton
        android:id="@+id/u3e7imgbtBulbasaur"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/Bulbasaur"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bulbasaur" />

    <ImageButton
        android:id="@+id/u3e7imgbtPikachu"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/Pikachu"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u3e7imgbtCharmander"
        app:srcCompat="@mipmap/pikachu" />

</androidx.constraintlayout.widget.ConstraintLayout>