<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut02.ut2e5PiedraPapeTigera">

    <ImageButton
        android:id="@+id/u2e5juegobtPiedra"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#27DAB0"
        android:contentDescription="@string/u2e5juegobtPiedra"
        android:scaleType="fitXY"
        android:src="@drawable/rock_svgrepo_com"
        app:layout_constraintEnd_toStartOf="@+id/u2e5juegobtPapel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/u2e5juegotwSalida1"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegotwSalida1" />

    <TextView
        android:id="@+id/u2e5juegotwJugador"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/u2e5juegotwSalida"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/u2e5juegotwMaquina"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/u2e5juegotwSalida2"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/u2e5juegotwSalida1"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/u2e5juegotwPuntuacion"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/u2e5juegotwJugador"
        app:layout_constraintStart_toStartOf="@+id/u2e5juegotwJugador"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegotwJugador" />

    <TextView
        android:id="@+id/u2e5juegotwSalida2"
        android:layout_width="70dp"
        android:layout_height="23dp"
        android:layout_marginTop="5dp"
        android:text="@string/u2e5juegotwPuntuacion"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/u2e5juegotwMaquina"
        app:layout_constraintStart_toStartOf="@+id/u2e5juegotwMaquina"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegotwMaquina" />

    <TextView
        android:id="@+id/u2e5juegotwRespuesta"
        android:layout_width="410dp"
        android:layout_height="85dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegobtTigera" />

    <Button
        android:id="@+id/u2e5juegobtReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:text="@string/u2e5juegobtReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/u2e5juegobtPapel"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#27DAB0"
        android:contentDescription="@string/u2e5juegobtPapel"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/u2e5juegotwSalida2"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegotwSalida2"
        app:srcCompat="@drawable/paper_svgrepo_com" />

    <ImageButton
        android:id="@+id/u2e5juegobtTigera"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#27DAB0"
        android:contentDescription="@string/u2e5juegobtTijera"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/u2e5juegobtPapel"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/u2e5juegobtPiedra"
        app:layout_constraintTop_toBottomOf="@+id/u2e5juegobtPiedra"
        app:srcCompat="@drawable/scissors_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>